# ChangeLog for dev-java/httpcomponents-client
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Sep 2013; Johann Schmitz <ercpe@gentoo.org> -files/httpclient-build.xml,
  -files/httpmime-build.xml, -files/maven-build.xml,
  httpcomponents-client-4.2.5.ebuild:
  Make the test suites run; put build.xml files in to seperate distfile;
  finished ebuild

  18 Jun 2013; johann@j-schmitz.net httpcomponents-client-4.2.5.ebuild,
  metadata.xml:
  Moved examples to JAVA_PKG_IUSE