@@ -1,2 +1,4 @@
 DIST httpcomponents-client-4.2.5-build.tar.bz2 3823 SHA256 60b452a527389f0302f20897ace2cfebaced0d7eede03130d7c2f822ab807216 SHA512 f3428794b2626946be29b4213f1801b745113e74ad8cd8f1865787c978857147d6cdf0be09d9fa20c77d5a1cb836b119d395ece652896e86f55771d16e5c8a5d WHIRLPOOL 86dee3c56a8933fca9a34588dacbf2f52463f2a33035512bdadb085af44e02f27830dd8660e40641c1e3d11c90a433cdd15a2c1509d2c8f56c7bc4cd5d547ae4
 DIST httpcomponents-client-4.2.5-src.tar.gz 1540936 SHA256 62940672a784914cfa518d9f06da4693f337c81d49f7640f717198283e9c3a89 SHA512 a7849537da1baeb420ed7510403cc953120935c7cb7e79488d1641e0fd87c7f36b5cfa4fcbdd992d994a211ed85d8f7b58324a4b4e15786f37d7fb79ef950144 WHIRLPOOL 785b261b1f8dd6c7733f11dc6272261c58779e81e784fff670fe09f7bbac201b799fefdabc15d61dba147ac528568529301bace9a26c7406f840c001f26d9e84
+DIST httpcomponents-client-4.3.1-build.tar.bz2 3372 SHA256 77838bce12d52943db110a37de73e8803e0adf4136be182a649674fe1c723d7e SHA512 c4b5278cb19c5ed21665bcdb8885854d3ef0a87c3e61c462e52bd74da22e17a2a8ba6e9c86c08db3e7aea071c4364df9ff605991a37ba315d47a81770d96bde0 WHIRLPOOL eca01701d90a07cfd664fe5ef5f1a44d63821a8602a6d2377afad9241ba04247b7efe117a051db60c0ac07e44ce114fd061bf2e56274bd9640233ec37ec3efbf
+DIST httpcomponents-client-4.3.1-src.tar.gz 738783 SHA256 43b3f14eff5785369492c00a5712760377177c03f8eb23ccf911a3e4f0c91cd9 SHA512 601e3c8043786ac9e2633cddc76e30aae31fa254e698e6abdce24e803c45516e116bb41fa8af40178abfa68c36805a108b132958ba0d91f14d3dac2efd4e62d0 WHIRLPOOL 764c89feaf191ed8ff49ae0759d542f7c6a9e348b7c86ada547cc854d0e8dc616bca6705c31f58636a93d620c8d90b70f2623af1da37cf6feee62a17a6d9014a
